# DogbreedsDect

./: .gitignore  Makefile  README.md  dev.ipynb  dev.py  mlflowtest.py  osvariables.py  pyproject.toml  requirements.txt  setup.py  text.txt  workflow.txt
dev/: dev_note.ipynb  tiptext.txt
development/: dev_note.ipynb  new.py
mlruns/0/: meta.yaml
mlruns/0/0dad4928fb5147c782b3aed981a01161/: meta.yaml
mlruns/0/0dad4928fb5147c782b3aed981a01161/metrics/: accuracy  loss  val_accuracy  val_loss
mlruns/0/0dad4928fb5147c782b3aed981a01161/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/88b8ffd0677c4f3590ff60638a891a81/: meta.yaml
mlruns/0/88b8ffd0677c4f3590ff60638a891a81/metrics/: accuracy  loss  val_accuracy  val_loss
mlruns/0/88b8ffd0677c4f3590ff60638a891a81/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/ce6c0e1bb5674c0cb6b855d5855926da/: meta.yaml
mlruns/0/ce6c0e1bb5674c0cb6b855d5855926da/metrics/: accuracy  loss  val_accuracy  val_loss
mlruns/0/ce6c0e1bb5674c0cb6b855d5855926da/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/d8d2ea6222954a65a5452bbe86627c92/: meta.yaml
mlruns/0/d8d2ea6222954a65a5452bbe86627c92/artifacts/: model_summary.txt
mlruns/0/d8d2ea6222954a65a5452bbe86627c92/metrics/: accuracy  loss  val_accuracy  val_loss
mlruns/166473747071412757/: meta.yaml
mlruns/211092711525833238/: meta.yaml
notebooks/: eda.ipynb  eda_analysis.ipynb
src/: dataset.py  dev_test.py  main.py
src/config/: config.yaml
src/utils/: logger.py  utl.py
(+31 files in other folders)
