[tool.poetry]
name = "dogbreeds-dect"
version = "0.1.0"
description = "Dog Classification"
authors = ["Ipadeola Ladipo Ezekiel <rileydrizzy@hotmail.com>"]
readme = "README.md"
packages = [{include = "dogbreeds_dect"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.3"
polars = "^0.18.8"
numpy = ">=1.22,<=1.24.3"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
